# P4

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
doc/tex/: Makefile  main.bib  main.tex
examples/: 2D.cc  3D.cc  CMakeLists.txt  inequality.cc  speed.cc  test.cc  tst.cc
src/: CMakeLists.txt  common.cc  common.h  gradient.cc  gradient.h  gradient_descent.cc  gradient_descent.h  line_search.cc  line_search.h  main-old.cc  main.cc  path_constraint.h  polynomial_bounds.h  polynomial_gradient.cc  polynomial_gradient.h  polynomial_path.h  polynomial_sampler.cc  polynomial_sampler.h  polynomial_solver.cc  polynomial_solver.h  solver.cc  solver.h
test/: CMakeLists.txt
